chore: new post structure

--- a/templates/index.go.html
+++ b/templates/index.go.html
@@ -5,7 +5,7 @@
 Nothing to see here
 {{ end }}
 {{ range . }}
-<a style="display: block;" href="/articles/{{.ID}}">{{.Title}}</a>
+<a style="display: block;" href="/{{.ID}}">{{.Title}}</a>
 {{ end }}
-<a style="display: block;" href="/articles">Create new article</a>
+<a style="display: block;" href="/new">Create new article</a>
 {{ end }}
