--- a/templates/new.go.html
+++ b/templates/new.go.html
@@ -1,25 +1,26 @@
-{{define "title"}}Add a new post{{end}}
-{{define "scripts"}}
-<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin" />
+{{ define "title" }}Add new post{{ end }}
+{{ define "scripts" }}
+<script src="https://cdn.tiny.cloud/1/z8st0q7hl76tk5jnp3cag89k6ckj7xco2mtd2l77np10ydxq/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 <script>
   tinymce.init({
-    selector: '#editor',
+    selector: 'textarea',
     plugins: 'image',
     toolbar: 'undo redo | blocks | image | ' +
-            'bold italic backcolor | alignleft aligncenter ' +
-            'alignright alignjustify | bullist numlist outdent indent | ' +
-            'removeformat | help',
-    images_upload_url: "/upload",
+          'bold italic backcolor | alignleft aligncenter ' +
+          'alignright alignjustify | bullist numlist outdent indent | ' +
+          'removeformat | help',
     relative_urls : false,
     remove_script_host : false,
-    convert_urls : true,
-  });
+    convert_urls : true
+  })
 </script>
-{{end}}
+{{ end }} 
 {{define "body"}}
+<h1>Add new post</h1>
 <form method="post" action="/new">
-  <input type="text" name="title" placeholder="Enter the title">
-  <textarea id="editor" name="content" />
-  <button id="submit" type="submit">Publish</button>
+  <input type="text" name="title" placeholder="Enter the title" required />
+  <textarea name="content"></textarea>
+  <input type="password" name="password" placeholder="Enter the password" required />
+  <button type="submit">Publish</button>
 </form>
-{{end}}
+{{ end }}
