feat: added a few features to tiny editor

--- a/templates/new.go.html
+++ b/templates/new.go.html
@@ -4,7 +4,7 @@
 <script>
   tinymce.init({
     selector: 'textarea',
-    plugins: 'image',
+    plugins: 'image lists link',
     toolbar: 'undo redo | blocks | image | ' +
           'bold italic backcolor | alignleft aligncenter ' +
           'alignright alignjustify | bullist numlist outdent indent | ' +
