fix: proper docker deploy and non-numbered slugs

--- a/templates/index.go.html
+++ b/templates/index.go.html
@@ -5,6 +5,6 @@
         Nothing to see here
     {{ end }}
     {{ range . }}
-        <a style="display: block;" href="/{{.ID}}">{{.Title}}</a>
+        <a style="display: block;" href="/{{.Slug}}">{{.Title}}</a>
     {{ end }}
 {{ end }}
