--- a/templates/new.go.html
+++ b/templates/new.go.html
@@ -17,7 +17,8 @@
 {{ end }} 
 {{define "body"}}
 <h1>Add new post</h1>
-<form method="post" action="/new">
+<form style="display: flex; flex-direction: column; gap: 15px;" method="post" action="/new">
+  <input type="text" name="slug" placeholder="Enter the slug" required />
   <input type="text" name="title" placeholder="Enter the title" required />
   <textarea name="content"></textarea>
   <input type="password" name="password" placeholder="Enter the password" required />
